fix members set